# python-sdk

./: .gitignore  README.md  pyproject.toml
examples/getting-started/: .gitignore  README.md  server.py  with_secret_store.py
examples/getting-started/registry/jsonph/: get_post.xrmcp.json
specification/v0.1.0/: schema.json
src/xrmcp/: __init__.py  app.py  jsonpath.py  output_mapper.py  processor.py  registry.py  runner.py  schema_validation.py  secrets.py  server.py  templates.py
src/xrmcp/executors/api/: __init__.py  auth.py  executor.py  request_builder.py
tests/: test_jsonpath.py  test_output_mapper.py  test_processor.py  test_runner.py  test_runtime.py  test_secrets.py
tests/executors/: test_api_executor.py
