[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrmcp"
version = "0.1.0"
description = "xrMCP Python runtime — install AI tools from JSON manifests without deploying hardcoded MCP servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "jsonpath-ng>=1.6",
  "jsonschema>=4.22",
  "mcp>=1.0.0",
  "starlette>=0.37",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
